| Bug #53944 | Out of table-records could be reported too early | ||
|---|---|---|---|
| Submitted: | 24 May 2010 13:17 | Modified: | 25 May 2010 12:49 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[24 May 2010 13:17]
Jonas Oreland
[24 May 2010 15:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/109074 3549 Jonas Oreland 2010-05-24 ndb - bug#53944 - fix problem where OLD_SCHEMA_FILE was not kept up to date, causing out too early "out of table records"
[24 May 2010 15:11]
Jonas Oreland
pushed to 7.0.15 and 7.1.4
[25 May 2010 12:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/109158 3550 Jonas Oreland 2010-05-25 ndb - bug#53944 - fix regression introduced shown by "testDict -n Bug24631 T1", don't update OLD_SCHEMA_FILE during restart
[25 May 2010 12:49]
Jon Stephens
Documented bugfix in the NDB-7.0.15 and 7.1.4 changelogs as follows:
After creating NDB tables until creation of a table fails due to
NDB error 905 -Out of attribute records (increase
MaxNoOfAttributes)-, then increasing MaxNoOfAttributes and
restarting all management node and data node processes, attempting
to drop and re-create any of the tables failed with the error -Out
of table records- even when sufficient table records were
available.
Closed.
