ndb - bug#53944 - fix problem where OLD_SCHEMA_FILE was not kept up to date, causing out too early "out of table records"